<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/road_pic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_edit"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEventName"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/event_editName" />

        <EditText
            android:id="@+id/text_minEventAge"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/min_event_age" />

        <EditText
            android:id="@+id/text_maxEventAge"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/max_event_age" />

        <EditText
            android:id="@+id/text_eventlvl"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/event_lvl" />

        <EditText
            android:id="@+id/text_eventPace"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/event_pace" />

        <Button
            android:id="@+id/btn_eventConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/green"
            android:drawableLeft="@drawable/baseline_check_24"
            android:text="@string/event_confirm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>