<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personcrossingroad"
            android:contentDescription="Image of PedalPal logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="76dp" />

        <ImageView
            android:id="@+id/pedalPalLogo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/pedalpal" />

        <Space
            android:id="@+id/pedalpalLogo"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:background="@drawable/pedalpal" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="35dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#184E31"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autoText="true"
                android:background="@drawable/login_border"
                android:drawableLeft="@drawable/baseline_email_24"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="#184E31" />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_border"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/green"
                android:text="@string/action_sign_in_short"
                android:textColorHighlight="#184E31"
                android:textColorLink="#184E31" />

            <TextView
                android:id="@+id/prompt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/prompt_signup" />

            <Button
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/green"
                android:text="@string/action_sign_up" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>